Början av elevportal

--- a/css/site.css
+++ b/css/site.css
@@ -20,6 +20,8 @@ body{
     font-family: inherit;
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
     float: left;
+    margin-top: -10px;
+    margin-left: 30%;
 }
 
 .ISSlogo {
@@ -85,7 +87,8 @@ a:hover {color: dodgerblue;}
     position:relative;
     height:281px;
     width:450px;
-    margin-left: 50%;
+    margin-left; 50%;
+    float: left;
 }
 
 #cf img {
@@ -100,6 +103,34 @@ a:hover {color: dodgerblue;}
 
 #cf img.top:hover {
     opacity: 0;
+
+}
+
+#bottombar{
+    width: 100%;
+    height: 500px;
+    float: left;
+    background-color: red;
+}
+#titleelevportal{
+    float: left;
+    margin-left: 43%;
+    font-family: inherit;
+}
+#leftsideelevportal{
+    width: 200px;
+    height: 500px;
+    float: left;
+    background-color: blue;
+    margin-left: -720px;
+}
+#leftsidetitle{
+    width: 100px;
+    height: 100px;
+    float: left;
+    font-family: inherit;
+    
+
 }
 
 
